--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
         <div class="purple4"></div>
         <div class="purple5"></div>
         <div class="purple6"></div>
-        <div class="purple"></div>
+        <div class="purpletext">
+            <div id="abstraction">
+                <h1>abstraction</h1>
+                <h1>#10</h1>
+            </div>
+        </div>
         <div class="purple"></div>
         <div class="purple"></div>
         <div class="purple"></div>
